# groq-transcribe

./: .env.example  README.md  pyproject.toml
src/groq_transcribe/: __init__.py  cli.py  config.py  engine.py  transcript.py  web.py
src/groq_transcribe/templates/: index.html
tests/: test_cli.py  test_engine.py  test_transcript.py  test_web.py
