[project]
name = "groq-transcribe"
version = "0.1.0"
description = "Audio-to-transcript service powered by Groq Whisper: interactive CLI and a simple FastAPI web UI, runs locally."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kulcsarrudolf" }]
dependencies = [
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
]

[project.scripts]
groq-transcribe = "groq_transcribe.cli:main"
groq-transcribe-web = "groq_transcribe.web:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groq_transcribe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # comprehensions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
